fix for stretch.

--- a/src/frontend/plugins/gatsby-plugin-top-layout/layout.scss
+++ b/src/frontend/plugins/gatsby-plugin-top-layout/layout.scss
@@ -6,7 +6,7 @@ body, #___gatsby, #gatsby-focus-wrapper {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  place-content: center;
+  place-content: stretch;
 
   .MuiModal-root {
 
