--- a/src/frontend/src/pages/index.module.scss
+++ b/src/frontend/src/pages/index.module.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 120px;
 }
 
 .app-bar {
